Tabla status_ac reemplaza variable global.

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
         margin-top: 1em;
     }
     .button{
+        cursor: pointer;
         background-color: #ff6768;
         color: #263859;
         padding: 0.5em;
@@ -29,7 +30,7 @@
         text-decoration: none;
     }
     .button:hover{        
-        background-color: #f77979;
+        background-color: #fa8f8f;
         -webkit-transform: scale(1.1);
         -moz-transform: scale(1.1);
         -ms-transform: scale(1.1);
